# nscpot-discord-rich-presence

./: .gitmoji-changelogrc  CHANGELOG.md  main.py  playerctl_utils.py  pyproject.toml
