[project]
name = "nscpot-discord-rich-presence"
version = "0.1.0"
description = "A python application to update your Discord status with what you're playing on ncspot"
readme = "README.md"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]

[tool.uv.sources]
pypresence = { git = "https://github.com/qwertyquerty/pypresence" }
